horizontal scroll issue corrected & about section added

--- a/css/site.css
+++ b/css/site.css
@@ -146,7 +146,8 @@ header .main .p2 {
 .portfolio {
   background-color: rgba(128, 128, 128, 0.151);
   text-align: center;
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .portfolio .port-parag .port-1 {
   font-size: 35px;
@@ -159,15 +160,49 @@ header .main .p2 {
   opacity: 0.8;
   padding-top: 20px;
 }
-.slider img {
+.slider .slider-area {
   width: 100%;
+}
+.slider img {
   width: 600px;
   height: 400px;
+
   margin: 0 auto;
   padding-top: 30px;
 }
-.slider p{
-    font-size: 20px;
-    font-family: "Epilogue", sans-serif;
-    padding-top: 10px;
+.slider p {
+  font-size: 20px;
+  font-family: "Epilogue", sans-serif;
+  padding-top: 10px;
+}
+
+.ab-main{
+  text-align: center;
+}
+.main-1{
+  font-size: 35px;
+  font-weight: 600;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.main-2{
+  font-size: 18px;
+  font-family: "Epilogue", sans-serif;
+  opacity: 0.8;
+  padding-top: 20px;
+}
+
+.about img{
+  border-radius: 50%;
+  border:5px solid gray;
+  width: 125px;
+  height: 125px;
+  
+}
+.ab-cont-1{
+  width: 100%;
+}
+.ab{
+  display: flex;
+  width: 50%;
 }
